--- a/docs/package.json
+++ b/docs/package.json
@@ -32,6 +32,7 @@
     "react-hot-loader": "3.0.0-beta.6",
     "recast": "^0.11.17",
     "style-loader": "^0.16.1",
+    "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
